fixed z-index

--- a/yousef-saleh/src/app/award/award.component.css
+++ b/yousef-saleh/src/app/award/award.component.css
@@ -62,13 +62,12 @@
 .popup {
   display: flex;
   position: fixed;
-  z-index: 999;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   border: var(--color-orange);
-  border-radius: 2px solid var(--color-orange);
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
